@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Update MonerisGateway to support merchant_data hash. Remove test_result_from_cc_number. [cody]
+#
 # * Remove AVS Message and CVV2 Message from params hash in Authorize.net [cody]
 #
 # * Update BrainTreeGateway to support merchant_data hash [cody]
